	PR fortran/65597 	* trans-openmp.c (gfc_trans_omp_do): For !simple simd with explicit 	linear clause for the iterator set OMP_CLAUSE_LINEAR_NO_COPYIN. 	For implcitly added !simple OMP_CLAUSE_LINEAR set it too.  Use step 1 	instead of the original step on the new iterator - count.

* testsuite/libgomp.fortran/pr65597.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@221776 138bc75d-0d04-0410-961f-82ee72b054a4